# whatdo

./: .coveragerc  .editorconfig  .travis.yml  LICENSE  MANIFEST.in  README.md  mypy.ini  setup.cfg  setup.py  tox.ini
features/: log_event.feature  track_time.feature
features/steps/: steps.py
prototype/: test1.py
src/whatdo/: adaptor.py  entry.py  model.py  port.py
tests/: __init__.py  test_nothing.py
tests/whatdo/: conftest.py  test_adaptor.py  test_entry.py  test_model.py  test_port.py
