[metadata]
name = whatdo
version = 0.1.9
description = A modular timetracking system
url = https://github.com/nullus/whatdo
maintainer = Dylan Perry
maintainer_email = dylan.perry@gmail.com

[options]
packages = find:
package_dir = =src

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    mypy
    behave

[options.entry_points]
console_scripts =
    whatdo=whatdo.entry:cli
