[metadata]
name = whatdo
version = 0.2.2
description = A modular timetracking system
url = https://github.com/nullus/whatdo
maintainer = Dylan Perry
maintainer_email = dylan.perry@gmail.com

[options]
packages = find:
package_dir = =src

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest-cov
    mypy
    behave
    # For Travis CI/codecov integration
    codecov

[options.entry_points]
console_scripts =
    whatdo=whatdo.entry:cli
