[metadata]
name = whatdo
version = 0.2.2
description = A modular timetracking system
url = https://github.com/nullus/whatdo
author = Dylan Perry
author_email = dylan.perry@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = file: LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir = =src

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest-cov
    mypy
    behave
    # For Travis CI/codecov integration
    codecov

[options.entry_points]
console_scripts =
    whatdo=whatdo.entry:cli
